Fixed spacing and screen sizes

--- a/frontend/src/nav.css
+++ b/frontend/src/nav.css
@@ -83,32 +83,31 @@ h6 {
 }
 
 #main {
-  margin-left: 300px;
+  /* margin-left: 300px; */
 }
 
-@media (min-width: 1199px) {
+@media (min-width: 780px) {
   .cart-badge-container {
     margin-left: 75%;
   }
 
   .productCard {
-    margin-left: 10rem;
+    /* margin-left: 10rem; */
+  }
+  .main {
+    margin-left: -30px;
   }
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 780px) {
   .productImg {
-    margin-left: 3rem;
+    /* margin-left: 3rem; */
   }
   .productCard {
     margin-top: -5rem;
   }
   #header {
     left: -300px;
-  }
-
-  .main {
-    margin-left: 0;
   }
 
   .logoCont {
